--- a/index.css
+++ b/index.css
@@ -23,7 +23,6 @@ main{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
 }
 
 .contenedor_principal{
@@ -49,6 +48,25 @@ main{
   background-color: white;
   overflow: hidden;
 }
+
+.iconContainer {
+  display: flex;
+  flex-direction: row;
+  gap: 80px;
+  position: relative;
+  top: 89%;
+  left: 25%;
+}
+
+.iconoImagen {
+  width: 30px;
+  transition: transform 0.3s ease;
+}
+
+.iconoImagen:hover {
+  transform: scale(1.3);
+}
+
 
 .img_cabecera {
   position: absolute;
@@ -139,66 +157,23 @@ main{
     flex-direction: column;
   }
 
-.menu_botones {
-  width: 50%;
-  max-width: 300px;
-  margin-bottom: 30px;
-}
+  .menu_botones {
+    width: 50%;
+    max-width: 300px;
+    margin-bottom: 30px;
+  }
 
-.cabecera_usuario {
-  border-radius: 20%;
-}
+  .cabecera_usuario {
+    border-radius: 20%;
+  }
 
-.foto_perfil {
-  width: 40%;
-}
+  .foto_perfil {
+    width: 40%;
+  }
 
-h1 {
-  font-size: 200%;
-}
-}
-
-.github {
-  border-style: none;
-  position: absolute;
-  width: 7%;
-  aspect-ratio: 1 / 1;
-  top: 89%;
-  left: 25%;
-  transform: translate(-50%, -50%);
-  overflow: hidden;
-  background-image: url(/img/icono\ github.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat; 
-}
-
-.linkedin {
-  position: absolute;
-  width: 7%;
-  aspect-ratio: 1 / 1;
-  top: 89%;
-  left: 51%;
-  transform: translate(-50%, -50%);
-  overflow: hidden;
-  background-image: url(/img/icono\ Linkedin.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat; 
-}
-
-.gmail {
-  position: absolute;
-  width: 7%;
-  aspect-ratio: 1 / 1;
-  top: 89%;
-  left: 75%;
-  transform: translate(-50%, -50%);
-  overflow: hidden;
-  background-image: url(/img/icono\ gmail.png);
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat; 
+  h1 {
+    font-size: 200%;
+  }
 }
 
 .Contenedor_Curriculum { 
