--- a/index.css
+++ b/index.css
@@ -53,13 +53,23 @@ main{
   display: flex;
   flex-direction: row;
   gap: 80px;
+  justify-content: center;
+  align-items: center;
   position: relative;
-  top: 89%;
-  left: 25%;
+  margin-top: 430px;
+}
+
+@media (max-width: 768px) {
+  .iconContainer {
+    flex-wrap: wrap;
+    gap: 60px;
+    margin-top: 290px;
+  }
 }
 
 .iconoImagen {
-  width: 30px;
+  align-items: center;
+  width: 25px;
   transition: transform 0.3s ease;
 }
 
@@ -172,7 +182,8 @@ main{
   }
 
   h1 {
-    font-size: 200%;
+    font-size: 150%;
+    text-align: center;
   }
 }
 
@@ -205,7 +216,6 @@ main{
   max-width: 500px;
   background-color: white;
   border-radius: 3%;
-
   display: flex;
   flex-wrap: wrap;
   flex-direction: row; 
@@ -226,7 +236,7 @@ main{
 }
 
 .Contenedor_Lenguajes img:hover {
-  transform: scale(1.1);
+  transform: scale(1.3);
 }
 
 .Contenedor_SobreMi{
@@ -256,5 +266,5 @@ main{
 }
 
 .Contenedor_SobreMi p:hover {
-  transform: scale(1.1);
+  transform: scale(1.2);
 }
